[package]
name = "bevy-terrain-1"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy-inspector-egui = "0.31.0"
bevy_panorbit_camera = { version = "0.27.0", features = ["bevy_egui"] }
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
